# vf-logger

./: .gitignore  CMakeLists.txt  VfLoggerConfig.cmake.in  jsoncontextloader.cpp  jsoncontextloader.h  vein-binary-logger.pro  vein-logger.pro  vein-logger_global.h  vf-logger.pro  vf_logger_data.qrc  vf_loggercontenthandler.h  vl_abstractloggerdb.cpp  vl_abstractloggerdb.h  vl_databaselogger.cpp  vl_databaselogger.h  vl_databaseloggerprivate.cpp  vl_databaseloggerprivate.h  vl_datalogger.cpp  vl_datalogger.h  vl_datasource.cpp  vl_datasource.h  vl_postgresdatabase.cpp  vl_postgresdatabase.h  vl_qmllogger.cpp  vl_qmllogger.h  vl_sqlitedb.cpp  vl_sqlitedb.h
lib/: CMakeLists.txt  VfLoggerConfig.cmake.in  customerdatasystem.cpp  customerdatasystem.h  databasecommandinterface.cpp  databasecommandinterface.h  databasefilepathchecker.cpp  databasefilewatcher.h  dataloggerprivate.cpp  dataloggerprivate.h  jsonloggedvalues.cpp  jsonloggedvalues.h  loggerstatictexts.cpp  loggerstatictexts.h  vf_logger_data.qrc  vf_loggercontenthandler.h  vl_abstractloggerdb.cpp  vl_abstractloggerdb.h  vl_databaselogger.cpp  vl_databaselogger.h  vl_datasource.cpp  vl_datasource.h  vl_globallabels.h  vl_loggedcomponents.cpp  vl_loggedcomponents.h  vl_qmllogger.cpp  vl_qmllogger.h  vl_sqlitedb.cpp  vl_sqlitedb.h  zeradblogger.cpp  zeradblogger.h
lib/content-sets/: contentsetsotherfromcontentsetsconfig.cpp  contentsetsotherfromcontentsetsconfig.h  contentsetszeraallfrommodmansessions.cpp  contentsetszeraallfrommodmansessions.h  jsonloggercontentloader.cpp  jsonloggercontentloader.h  jsonloggercontentsessionloader.cpp  jsonloggercontentsessionloader.h  loggedcomponents.cpp  loggedcomponents.h  loggercontentsetconfig.cpp  loggercontentsetconfig.h  loggercontentsetshelper.cpp  loggercontentsetshelper.h
lib/file-helpers/: databasefilepathchecker.h  databasefilewatcher.cpp  databasefilewatcher.h
lib/qml/: data_logger.qml
lib/rpc/: rpccreatesnapshot.cpp  rpccreatesnapshot.h  rpccreatevectordiagram.cpp  rpccreatevectordiagram.h  rpcdeletesession.cpp  rpcdeletesession.h  rpcdeletetransaction.cpp  rpcdeletetransaction.h  rpcdisplayactualvalues.cpp  rpcdisplayactualvalues.h  rpcdisplaycustomerdata.cpp  rpcdisplaycustomerdata.h  rpcdisplaysessionsinfos.cpp  rpcdisplaysessionsinfos.h  rpclistallsessions.cpp  rpclistallsessions.h
lib/rpc-param-helpers/: vectorpaintingoptions.cpp  vectorpaintingoptions.h
lib/sqlite/: query_data_human_readable_sqlite.sql  query_data_sqlite.sql  query_session_static_components.sql  schema_sqlite.sql
lib/tasks/: taskdbaddsession.cpp  taskdbaddsession.h  taskdbaddtransaction.cpp  taskdbaddtransaction.h  taskdbupdatetransactionstarttime.cpp  taskdbupdatetransactionstarttime.h  taskdbupdatetransactionstoptime.cpp  taskdbupdatetransactionstoptime.h  tasksdbtakesnapshotsequence.cpp  tasksdbtakesnapshotsequence.h  taskstakesnapshot.cpp  taskstakesnapshot.h
lib/vector-helper/: vectoractualvalueextractor.cpp  vectoractualvalueextractor.h  vectordiagramcreator.cpp  vectordiagramcreator.h
src/: CMakeLists.txt  VfLoggerConfig.cmake.in  globalIncludes.h  loggercontentsetconfig.cpp  loggercontentsetconfig.h  vf_logger_data.qrc  vl_componentunion.cpp  vl_componentunion.h  vl_databaselogger.cpp  vl_databaselogger.h  vl_datasource.h  vl_globallabels.h  vl_postgresdatabase.cpp  vl_postgresdatabase.h  vl_qmllogger.cpp  vl_qmllogger.h  vl_sqlitedb.cpp  vl_sqlitedb.h
testlib/: CMakeLists.txt  contentsetsotherfromcontentsetsconfig.cpp  testcomponentinforeceiver.cpp  testcomponentinforeceiver.h  testdbaddsignaller.cpp  testdbaddsignaller.h  testinsertspiestojson.cpp  testinsertspiestojson.h  testloggerdb.cpp  testloggerdb.h  testloggersystem.cpp  testloggersystem.h  testsqlitedb.cpp  testsqlitedb.h
tests/: CMakeLists.txt  test_componentunion.cpp  test_componentunion.h  test_contentsets.cpp  test_contentsets.h  test_create_vector_diagram.cpp  test_create_vector_diagram.h  test_database.cpp  test_database.h  test_db_command_interface_meta_registered.cpp  test_db_command_interface_meta_registered.h  test_db_tasks.cpp  test_db_tasks.h  test_entities_stored_always.cpp  test_entities_stored_always.h  test_jsonloggercontentloader.cpp  test_jsonloggercontentloader.h  test_loggedcomponents.cpp  test_loggedcomponents.h  test_loggercontentsessionloader.cpp  test_mockandsqlitedatabase.cpp  test_mockandsqlitedatabase.h  test_rpc_snapshot.cpp  test_rpc_snapshot.h  test_sqlite_db.cpp  test_sqlite_db.h  test_testdatabase.cpp  test_testdatabase.h  test_testlib_testloggersystem.cpp  test_testlib_testloggersystem.h  test_vector_actual_value_extractor.cpp  test_vector_actual_value_extractor.h  test_vector_painting_options.cpp  test_vector_painting_options.h
tests/test-data/: dumpComponentsOnSessionNewWithCustomerdata.json  dumpDbOpenErrorLate.json  dumpDbOpenOk.json  dumpDbOpenSetSessionAndClose.json  dumpDbRecordInitial.json  dumpDbSetSessionAvail.json  dumpDbSetSessionNew.json  dumpInitial.json  dumpRecordOneContentSet.json  dumpSetContentAll.json  dumpSetContentSetInvalid.json  dumpSetContentSetValidByString.json  dumpSetContentValid.json  dumpSetContentValidTwo.json  dumpSetContentValidTwoSame.json  test-data.qrc
tests/test-data/contentsets/: test-session.json  test-session2.json
tests/test-data/customerData/: emptyCustomerData.json  filledCustomerData.json
tests/test-data/logged-values/: LogAll.json  LogTestSet1.json  LogTestSet2.json  dftRangeValues.json  dftValues.json  rangeValues.json
tests/test-data/recording-dumps/: dumpCreateSession.json  dumpCreateSessionNoCustomerDataSystem.json  dumpRecordAllContentSets.json  dumpRecordAllContentSetsStartStop.json  dumpRecordAlwaysStartStopStart.json  dumpRecordAlwaysTwoEntities.json  dumpRecordAlwaysTwoSetOneEntities.json  dumpRecordNotStarted.json  dumpRecordOneContentSet.json  dumpRecordTwoContentSets.json
tests/test-data/session-infos/: AllSessions.json  DbTestSession1MultipleTransactions.json
tests/test-data/sessions/: test-session.json  test-session2.json
tests/test-data/sqlite-inserts/: dumpRecordTwoEntityComponents.json  dumpSessionCreated.json  (+1 more)
(+50 files in other folders)
